src/tests/routes/me/tokens/snapshots/crates_io__tests__routes__me__tokens__create__create_token_with_expiry_date-2.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: app.emails_snapshot()
snapshot_kind: text
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: New API token "bar" created
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

Hello foo!

A new API token with the name "bar" was recently added to your crates.io ac=
count.

If this wasn't you, you should revoke the token immediately: https://crates=
.io/settings/tokens
