src/tests/routes/me/tokens/snapshots/crates_io__tests__routes__me__tokens__create__create_token_with_expiry_date.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: response.json()
snapshot_kind: text
---
{
  "api_token": {
    "crate_scopes": null,
    "created_at": "[datetime]",
    "endpoint_scopes": null,
    "expired_at": "2024-12-24T07:34:56+00:00",
    "id": "[id]",
    "last_used_at": "[datetime]",
    "name": "bar",
    "token": "[token]"
  }
}
