src/tests/routes/me/tokens/snapshots/crates_io__tests__routes__me__tokens__create__create_token_with_scopes.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: response.json()
snapshot_kind: text
---
{
  "api_token": {
    "crate_scopes": [
      "tokio",
      "tokio-*"
    ],
    "created_at": "[datetime]",
    "endpoint_scopes": [
      "publish-update"
    ],
    "expired_at": null,
    "id": "[id]",
    "last_used_at": "[datetime]",
    "name": "bar",
    "token": "[token]"
  }
}
