src/tests/routes/me/tokens/snapshots/crates_io__tests__routes__me__tokens__create__create_token_with_trusted_publishing_scope-2.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: response.json()
---
{
  "api_token": {
    "crate_scopes": [
      "my-crate",
      "my-*"
    ],
    "created_at": "[datetime]",
    "endpoint_scopes": [
      "trusted-publishing"
    ],
    "expired_at": null,
    "id": "[id]",
    "last_used_at": "[datetime]",
    "name": "trusted-publishing-token",
    "token": "[token]"
  }
}
