src/tests/routes/me/tokens/snapshots/crates_io__tests__routes__me__tokens__create__create_token_with_trusted_publishing_scope-3.snap
---
source: src/tests/routes/me/tokens/create.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: New API token "trusted-publishing-token" created
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new API token with the name "trusted-publishing-token" was recently added to your crates.io account.

If you did not create this token, you should revoke it immediately: https://crates.io/settings/tokens.

--
The crates.io Team
